# uniks

./: .guix-authorizations  .guix-channel  Cargo.toml  flake.nix  lamdy.nix  readme.md  readme.org  uniks.scm
aski/: Cargo.toml
aski-mentci/: Cargo.toml
aski-mentci/src/: main.rs
aski/src/: lib.rs
askiom_derive/: Cargo.toml
askiom_derive/src/: lib.rs
astra/: Cargo.toml
astra/src/: main.rs
aybzorb/: Cargo.toml
aybzorb/src/: main.rs
flo/: Cargo.toml
floniks/: Cargo.toml  readme.md
floniks/src/: lib.rs
guile-modules/: uniks.scm
guile-modules/uniks/: krimyn.scm  os.scm  packages.scm  utils.scm
hob/: Cargo.toml
hob/src/: lib.rs
instayl/: Cargo.toml
iuniks/: Cargo.toml
iuniks/src/: main.rs
krioniks/: Cargo.toml
krioniks/src/: main.rs
meikIuniksTri/: Cargo.toml
meikPod/: Cargo.toml
meikPod/src/: main.rs
mentci/: Cargo.toml
niks/: Cargo.toml
niks/src/: lib.rs
nixrs/src/: lib.rs
spiniks/: Cargo.toml  readme.md
spiniks/src/: main.rs
src/: lib.rs
uniks/: home.scm  krimyn.scm  os.scm  packages.scm  utils.scm
