[workspace]
members = [ "krioniks", "hob", "floniks", "spiniks", "aybzorb", "aski-mentci", "meikIuniksTri" ]

[package]
name = "uniks"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
edition = "2018"

[features]
default = [  ]

[dependencies.sajban]
version = "*"
features = []
path = "../sajban"

[dependencies.serde]
version = "*"
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.async-trait]
version = "*"
git = "file:///git/github.com/dtolnay/async-trait"
branch = "master"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
git = "file:///git/github.com/async-rs/async-std"
branch = "maisiliym/dev/serde"

[dependencies.blake3]
version = "*"
git = "file:///git/github.com/BLAKE3-team/BLAKE3"
branch = "master"
