[workspace]
members = [
    "krioniks"
  , "hob"
  , "floniks"
  , "spiniks"
  , "aybzorb"
  , "aski-mentci"
  , "meikPod"
  , "niks"
  , "iuniks"
  ]

[package]
name = "uniks"
version = "0.0.1"
authors = ["li <@li:maisiliym.uniks>"]
edition = "2018"

[features]
default = [  ]

[dependencies.sajban]
version = "*"
features = [ "uniks" ]
git = "file:///home/li/dev/sajban"
branch = "mein"

[dependencies.async-trait]
version = "*"
git = "file:///git/github.com/dtolnay/async-trait"
branch = "master"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
git = "file:///git/github.com/async-rs/async-std"
branch = "serde"

[dependencies.key-vec]
version = "*"
git = "file:///git/gitlab.com/spearman/key-vec"
branch = "master"
features = [ "serde" ]

[dependencies.serde]
version = "*"
features = [ "std", "derive" ]
