[package]
name = "aski_mentci"
version = "0.1.0"
authors = ["li <@li:maisiliym.uniks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "*"
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.tui]
version = "*"
git = "file:///git/github.com/fdehau/tui-rs"
branch = "master"
