[package]
name = "aybzorb"
version = "0.1.0"
authors = ["li <@li:maisiliym.uniks>"]
edition = "2018"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
git = "file:///git/github.com/async-rs/async-std"
branch = "maisiliym/dev/serde"

[dependencies.serde]
version = "*"
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.structopt]
version = "*"
