[package]
name = "meikPod"
version = "0.1.0"
authors = ["li <@li:maisiliym.uniks>"]
edition = "2018"

[dependencies.uniks]
version = "*"
features = []
path = ".."

[dependencies.niks]
version = "*"
features = []
path = "../niks"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
git = "file:///git/github.com/async-rs/async-std"
branch = "serde"
