[package]
name = "niks"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
workspace = ".."
edition = "2018"

[features]
default = [  ]

[dependencies.serde]
version = "*"
features = [ "derive" ]

[dependencies.async-trait]
version = "*"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
path = "/git/github.com/async-rs/async-std"

