[package]
name = "niks"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
workspace = ".."
edition = "2018"

[features]
default = [  ]

[dependencies.serde]
version = "*"
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.async-trait]
version = "*"
git = "file:///git/github.com/dtolnay/async-trait"
branch = "master"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
git = "file:///git/github.com/async-rs/async-std"
branch = "serde"
