[package]
name = "spiniks"
version = "0.1.0"
authors = ["li <@li:maisiliym.uniks>"]
edition = "2018"

[features]
default = [  ]

[dependencies.serde]
version = "*"
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.ron]
version = "*"
git = "file:///git/github.com/ron-rs/ron"
branch = "serde"

[dependencies.async-std]
version = "*"
features = [ "attributes", "serde" ]
git = "file:///git/github.com/async-rs/async-std"
branch = "serde"
